--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "imadoko",
   "version": "0.1.0",
   "description": "imadoko? kokodayo!",
-  "main": "kokodayo.js",
+  "main": "app.js",
   "dependencies": {
-    "noble": "^1.0.1"
+    "config": "^1.14.0",
+    "js-yaml": "^3.3.1",
+    "noble": "^1.0.1",
+    "node-trello": "^1.1.2"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "nalabjp",
