--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "config": "^1.14.0",
     "js-yaml": "^3.3.1",
     "noble": "^1.0.1",
+    "node-schedule": "^0.2.9",
     "node-trello": "^1.1.2"
   },
   "devDependencies": {},
